--- a/gb/21/9/30/n13271735.md
+++ b/gb/21/9/30/n13271735.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjmocf3555/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjmocf3555/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjmocf3555/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjmocf3555/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>国外网购超商取货付款 台经部：不得用五倍券</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年09月30日讯】（大纪元记者徐翠玲台湾台北报导）针对社群媒体谣传在国外电商平台采购商品，到<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>取货可用纸本<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E4%BA%94%E5%80%8D%E5%88%B8.md#1">五倍券</a>支付，<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>30日提醒，国外电商线上交易于<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>取货付款，超商仅收现金，并无代收五倍券，并再次要求四大超商，境外电商货品采货到付款者，不得以五倍券支付。</p>
-<p><ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>中小企业处表示，为鼓励民众绑定数位，振兴<ahref="https://github.com/fjmocf3555/djy/blob/master/gb/tag/%E4%BA%94%E5%80%8D%E5%88%B8.md#1">五倍券</a>除允许共同绑定、开发数位标章，供店家辨识提供民众优惠外，并开放可使用于国内电商交易，但近期社群媒体谣传民众在国外电商平台采购商品，于超商取货可支付纸本五倍券，即可钻漏洞使用。</p>
+<p>【大纪元2021年09月30日讯】（大纪元记者徐翠玲台湾台北报导）针对社群媒体谣传在国外电商平台采购商品，到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>取货可用纸本<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%94%E5%80%8D%E5%88%B8.md#1">五倍券</a>支付，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>30日提醒，国外电商线上交易于<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%85%E5%95%86.md#1">超商</a>取货付款，超商仅收现金，并无代收五倍券，并再次要求四大超商，境外电商货品采货到付款者，不得以五倍券支付。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E9%83%A8.md#1">经济部</a>中小企业处表示，为鼓励民众绑定数位，振兴<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BA%94%E5%80%8D%E5%88%B8.md#1">五倍券</a>除允许共同绑定、开发数位标章，供店家辨识提供民众优惠外，并开放可使用于国内电商交易，但近期社群媒体谣传民众在国外电商平台采购商品，于超商取货可支付纸本五倍券，即可钻漏洞使用。</p>
 <p>中小企业处提醒，国外电商线上交易，于超商取货付款，因属代收代付性质，容易衍生退换货或退钱的困扰，超商仅收现金，并无代收五倍券。</p>
 <p>关于网友近日在社群平台张贴收购五倍券讯息，以低价收购赚价差，中小企业处表示，已通知相关平台协助下架处理，主要社群网站也配合启动检举后快速下架的机制外，并开始设计系统扫除的方式，自动处理违规交易的社团跟贴文。中企处29日邀集各大电商、社群媒体平台业者讨论相关防范机制，业者承诺建立监测、巡检及下架机制，并于商品页面上架前进行审查过滤。</p>
 <p>振兴五倍券截至29日，纸本预订已达934万人，数位绑定逾382万人，总计突破1,316万人，占符合资格可领用数约56%。数位五倍券个人绑定至明年4月30日止；共同绑定从今年9月22日至10月1日截止，该期间内可新增或退出共同绑定；10月2日至10月6日中午12时前仍可退出共同绑定。</p>
@@ -16,47 +16,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13268225.md#1">青埔商圈三雄鼎立  大江购物中心高回馈20%</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13268731.md#1">桃捷公司盘点撙节项目 期盼渡过疫情难关</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13268990.md#1">元大宝华上修台今年GDP成长至6%</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13269005.md#1">五倍券再加码  屏县府推88888份“屏东券”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13269063.md#1">台国旅券逾3千家业者参与 抵用张数无上限</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13269148.md#1">超商代缴淘宝费用 王美花：不适用五倍券</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13269176.md#1">台财部研议加码五倍券消费云端发票奖</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13269184.md#1">中国若继续停电 台经长：台商影响待观察</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/9/29/n13269307.md#1">基本工资有望最少涨1440元 台劳长：支持调涨</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13383918.md#1">金管会公布“保险业远距投保注意事项”即日实施</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13268225.md#1">青埔商圈三雄鼎立  大江购物中心高回馈20%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13268731.md#1">桃捷公司盘点撙节项目 期盼渡过疫情难关</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13268990.md#1">元大宝华上修台今年GDP成长至6%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13269005.md#1">五倍券再加码  屏县府推88888份“屏东券”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13269063.md#1">台国旅券逾3千家业者参与 抵用张数无上限</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13269148.md#1">超商代缴淘宝费用 王美花：不适用五倍券</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13269176.md#1">台财部研议加码五倍券消费云端发票奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13269184.md#1">中国若继续停电 台经长：台商影响待观察</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/9/29/n13269307.md#1">基本工资有望最少涨1440元 台劳长：支持调涨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616531.md#1">因应减碳潮流 台工业局推动中小企业辅导</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/13/n11110799.md#1" target="_blank">重庆八旬教师控告江泽民 遭报复</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/12/n13372289.md#1">【未解之谜】外星人访谈录（2）来自外太空的远征军</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389736.md#1">【军事热点】美日海军反潜战演习意在牵制中共</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388317.md#1">【财商天下】大陆房企自救 老板亲自“输血”</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388333.md#1">【横河观点】中国共产运动拐点 暴严重衰老迹象</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387150.md#1">分析：彭帅事件为中共带来真正挑战和窘境</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13385054.md#1">中共拟惩处翻墙软件提供者 分析：翻墙封不住</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389860.md#1">《少年》香港禁映 导演：影片是通往自由的窗口</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/19/n13386020.md#1">2021年全球最不安全密码曝光 1秒内可破解</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/fjmocf3555/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjmocf3555/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/30/n13271735.htm">国外网购超商取货付款 台经部：不得用五倍券</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/30/n13271735.htm">国外网购超商取货付款 台经部：不得用五倍券</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjmocf3555/djy/blob/master/gb/21/9/30/n13271735.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjmocf3555/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjmocf3555/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjmocf3555/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/30/n13271735.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
